# heftia-docker

./: README.md
docker/: Dockerfile
example/: heftia-example.cabal  hie.yaml
example/app/: Main.hs
